--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Privils.github.io/privils_play_portal",
+  "homepage": "https://Privils.github.io/Game-Index",
   "name": "privils_play_portal",
   "version": "0.1.0",
   "private": true,
